# Meta-Env-Hackthon

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
env/: base_task.py  environment.py
env/tasks/: code_review_task.py  email_task.py  support_task.py
graders/: code_grader.py  email_grader.py  support_grader.py
models/: action.py  observation.py  reward.py
server/: app.py
